# Capstone-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: load_mw_no_time.csv  system_load_mw.csv
src/: DP.cpp  DP.h  Generator.cpp  Generator.h  ThreadPool.h  combination.cpp  combination.h  dijkstra.cpp  dijkstra.h  economic_dispatch.cpp  economic_dispatch.h  generator.cpp  generator.h  lambdaFunction.cpp  main.cpp  matrix.cpp  matrix.h  parser.cpp  parser.h  ranking.h  unit_commitment.cpp  unit_commitment.h  unknown.cpp
test/: CMakeLists.txt  parser_test.cpp  testEconomic_Dispatch.cpp  testGenerator.cpp  testParser.cpp  test_Combination.cpp  test_Combinations.cpp  test_DP.cpp  test_Dijkstra.cpp  test_Economic_Dispatch.cpp  test_Parser.cpp  test_generator.cpp  test_matrix.cpp  test_parser.cpp
unit-commitment/: CMakeLists.txt  generator.h  main.cpp  matrix.h  parser.cpp  parser.h
unit-commitment/data/: data.csv
